<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGText"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        tools:ignore="contentDescription"
        style="@style/TitlePictureStyle"
        android:src="@drawable/budapest"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/TextStyle"
            android:textColor="@color/TitleText"
            android:text="@string/app_name"/>
        <ScrollView
            style="@style/ScrollStyle"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/SecondTextStyle"
                    android:textColor="@color/QuestionText"
                    android:text="@string/Q1Quote1"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBOne"
                        android:text="@string/Q1Day1"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBTwo"
                        android:text="@string/Q1Day2"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBThree"
                        android:text="@string/Q1Day3"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBFour"
                        android:text="@string/Q1Day4"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBFive"
                        android:text="@string/Q1Day5"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBSix"
                        android:text="@string/Q1Day6"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:id="@+id/questionOneRBSeven"
                        android:text="@string/Q1Day7"/>
                </RadioGroup>
                <View
                    style="@style/ViewStyle"/>
                <TextView
                    style="@style/SecondTextStyle"
                    android:textColor="@color/QuestionText"
                    android:text="@string/Q2Quote1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        tools:ignore="contentDescription"
                        style="@style/CheckBoxStyle"
                        android:src="@drawable/dog"/>
                    <ImageView
                        tools:ignore="contentDescription"
                        style="@style/CheckBoxStyle"
                        android:src="@drawable/monkey"/>
                    <ImageView
                        tools:ignore="contentDescription"
                        style="@style/CheckBoxStyle"
                        android:src="@drawable/rabbit"/>
                    <ImageView
                        tools:ignore="contentDescription"
                        style="@style/CheckBoxStyle"
                        android:src="@drawable/turtle"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBOne"
                        android:text="@string/Q2Animal1"/>
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBTwo"
                        android:text="@string/Q2Animal2"/>
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBThree"
                        android:text="@string/Q2Animal3"/>
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBFour"
                        android:text="@string/Q2Animal4"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBFive"
                        android:text="@string/Q2Animal5"/>
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBSix"
                        android:text="@string/Q2Animal6"/>
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBSeven"
                        android:text="@string/Q2Animal7"/>
                    <CheckBox
                        style="@style/CheckBoxStyle"
                        android:id="@+id/questionTwoCBEight"
                        android:text="@string/Q2Animal8"/>
                </LinearLayout>
                <View
                    style="@style/ViewStyle"/>
                <TextView
                    style="@style/SecondTextStyle"
                    android:textColor="@color/QuestionText"
                    android:text="@string/Q3Quote1"/>
                <TextView
                    style="@style/TextStyle"
                    android:text="@string/Q3Place1"/>
                <EditText
                    style="@style/EditTextStyle"
                    android:id="@+id/questionThree"
                    android:hint="@string/inputText"/>
                <View
                    style="@style/ViewStyle"/>
                <ImageView
                    tools:ignore="contentDescription"
                    style="@style/PictureStyle"
                    android:src="@drawable/roompic"/>
                <TextView
                    style="@style/SecondTextStyle"
                    android:textColor="@color/QuestionText"
                    android:text="@string/Q4Quote1"/>
                <TextView
                    style="@style/SecondTextStyle"
                    android:textColor="@color/QuestionText"
                    android:text="@string/Q4Ques1"/>
                <RadioGroup
                    android:orientation="horizontal"
                    style="@style/RadioStyle">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFourRBOne"
                        android:text="@string/Q4Ans1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFourRBTwo"
                        android:text="@string/Q4Ans2"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFourRBThree"
                        android:text="@string/Q4Ans3"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFourRBFour"
                        android:text="@string/Q4Ans4"/>
                </RadioGroup>
                <TextView
                    style="@style/SecondTextStyle"
                    android:textColor="@color/QuestionText"
                    android:text="@string/Q4Ques2"/>
                <RadioGroup
                    android:orientation="horizontal"
                    style="@style/RadioStyle">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFiveRBOne"
                        android:text="@string/Q4Ans1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFiveRBTwo"
                        android:text="@string/Q4Ans2"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFiveRBThree"
                        android:text="@string/Q4Ans3"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/questionFiveRBFour"
                        android:text="@string/Q4Ans4"/>
                </RadioGroup>
                <View
                    style="@style/ViewStyle"/>

            </LinearLayout>
        </ScrollView>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/OutButton2"
            android:onClick="finishBtn"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/OutButton1"
            android:onClick="restartBtn"/>
    </LinearLayout>

</RelativeLayout>
